# rustible

./: .dockerignore  .gitignore  CLAUDE.md  COPY_MODULE_IMPLEMENTATION.md  Cargo.toml  DEBUG_MODULE_IMPLEMENTATION.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  FAILURE_ERADICATION_PLAN.md  FORKS_CODE_REVIEW.md  FORKS_IMPLEMENTATION_REPORT.md  FORKS_VERIFICATION.md  FORMATTING_DISABLED.tmp  HIVE2_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INCLUDE_TASKS_SUMMARY.md  LICENSE  OUTPUT_BUFFERING_IMPLEMENTATION.md  PARALLELIZATION_QUICKSTART.md  PARALLEL_E2E_TESTS.md  PARALLEL_ERROR_HANDLING_GUIDE.md  PARALLEL_OUTPUT_FIX_SUMMARY.md  QUICK_START_DEBUG.md  README.md  ROADMAP.md  SET_FACT_IMPLEMENTATION.md  TEMPLATE_MODULE_IMPLEMENTATION.md  check_md5  cliff.toml
.Jules/: palette.md
.cargo/: audit.toml
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  release.yml  security.yml
.jules/: bolt.md  palette.md  sentinel.md
.tmp/: final_benchmark_results.md  hive1_connpool_analysis.md  hive1_stats_analysis.md  hive1_verification.md  hive3_russh_research.md  module_async_plan.md  module_docs.md  russh_migration_plan.md  rustix_test_can_compile  test_group.yml
benches/: README.md  ansible_comparison.rs  callback_bench.rs  callback_benchmark.rs  connection_pool_benchmark.rs  execution_benchmark.rs  memory_benchmark.rs  module_benchmark.rs  parallel_benchmark.rs  performance_benchmark.rs  russh_benchmark.rs  sprint2_feature_benchmark.rs  strategy_benchmark.rs  template_benchmark.rs  template_optimization_benchmark.rs  unified_benchmark.rs
benches/comparison/: bench_01_simple.yml  bench_02_file_ops.yml  bench_03_multi_task.yml  bench_04_comprehensive.yml  bench_05_many_hosts.yml  bench_06_many_tasks.yml  bench_07_templates.yml  bench_08_loops.yml  bench_09_handlers.yml  bench_10_conditionals.yml  bench_connection_pool.yml  bench_parallel_hosts.yml  inventory.yml  run_benchmark.sh  run_parallel_benchmark.sh  run_pool_benchmark.sh  test_command.yml  verify_test.yml
benches/scripts/: compare_baselines.sh  generate_report.sh  run_all.sh
benches/ssh_comparison/: ANALYSIS.md  Cargo.toml  EXAMPLE_OUTPUT.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  run_benchmarks.sh
benches/ssh_comparison/src/: main.rs
benchmarks/comparison/: inventory.ini
deploy/: STANLEY_DEPLOYMENT.md  stanley-deployment.yml  stanley-inventory.yml
deploy/docker/: .dockerignore  docker-compose.yml
deploy/kubernetes/: configmap.yaml  cronjob.yaml  deployment.yaml  job.yaml  kustomization.yaml  namespace.yaml  secret.yaml
docs/: ARCHITECTURE.md  COVERAGE_REPORT.md  DELEGATION_INTEGRATION_COMPLETE.md  EXECUTOR_INTEGRATION_PATCH.md  PARALLELIZATION_ENFORCEMENT.md  PARALLELIZATION_IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  SWARM_EXECUTION_REPORT.md  api-consistency-review-report.md  cli-reference.md  connection_module_bug_report.md  include_tasks.md  inventory.md  memory-analysis-report.md  performance-summary.md  performance.md  plan-flag-demo.md  plan_mode.md  quick-start.md  serial-execution-implementation.md  test_coverage_analysis.md
docs/adr/: 0003-callback-plugin-architecture.md
docs/api/: README.md  modules.md
docs/architecture/: 0001-architecture-overview.md  0002-module-system-design.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_02.md  web-ui.md
docs/archive/: CODE_QUALITY_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INCLUDE_TASKS_IMPLEMENTATION.md  PLAN_FEATURE_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT_2025-12-25.md  code_quality_report.md  integration_test_report.md  plan-flag-implementation.md  plan-flag-verification.md  serial-execution-integration.md  sprint2_review_report.md
docs/coverage/: COVERAGE_REPORT.md  tarpaulin-report.html
docs/design/: distributed-execution.md  terraform-integration.md
docs/development/: CONTRIBUTING.md  callback-plugins.md  connection-plugins.md  custom-modules.md
docs/guides/: 01-introduction.md  02-playbooks.md  README.md  best-practices.md  container-guide.md  delegation.md  migration-from-ansible.md  performance-tuning.md
docs/modules/: apt.md  assert.md  blockinfile.md  command.md  copy.md  cron.md  debug.md  dnf.md  file.md  git.md  group.md  hostname.md  include_tasks.md  include_vars.md  lineinfile.md  pip.md  service.md  set_fact.md  shell.md  stat.md  sysctl.md  template.md  user.md
docs/reference/: callbacks.md  variables.md
docs/security/: BECOME_AUDIT.md  SECURITY_AUDIT_REPORT.md  SPRINT2_AUDIT.md  VAULT_AUDIT.md  security-audit-report-2025-12-25.md
docs/specs/: REGISTRY_ARCHITECTURE.md
examples/: apt_example.yml  copy_demo.yml  debug_playbook.yml  docker_swarm.yml  git_example.yml  inventory.yml  kubernetes_cluster.yml  lamp_stack.yml  playbook.yml  serial-execution-example.yml  server_hardening.yml  user_management.yml
fuzz/: Cargo.toml  README.md
scripts/: release.sh  run-e2e-tests.sh  run_parallel_e2e_tests.sh  run_tests.sh
src/: config.rs  error.rs  facts.rs  handlers.rs  include.rs  lib.rs  main.rs  output.rs  playbook.rs  retry.rs  roles.rs  strategy.rs  tasks.rs  template.rs  template_old.rs.bak  traits.rs  vault.rs
src/analysis/: complexity.rs  (+6 more)
tests/: E2E_MODULES_README.md  EDGE_CASE_TEST_DOCUMENTATION.md  FILE_MODULE_TESTS_README.md  README.md  ansible_compat_tests.rs  ansible_output_compat_tests.rs  ansible_playbook_compat_tests.rs  async_tests.rs  become_security_tests.rs  become_tests.rs  block_tests.rs  cache_tests.rs  callback_async_tests.rs  callback_concurrent_tests.rs  callback_edge_case_tests.rs  callback_factory_tests.rs  callback_fuzz_tests.rs  callback_integration_tests.rs  callback_manager_tests.rs  callback_output_capture_tests.rs  callback_plugin_tests.rs  callback_registration_tests.rs  callback_serialization_tests.rs  callback_tests.rs  callback_yaml_tests.rs  chaos_tests.rs  check_mode_tests.rs  cli_tests.rs  conditionals_tests.rs  config_tests.rs  connection_enhancement_tests.rs  connection_tests.rs  copy_module_tests.rs  debug_module_tests.rs  default_callback_plugin_tests.rs  delegate_tests.rs  delegation_tests.rs  diff_tests.rs  e2e_docker_tests.rs  edge_case_tests.rs  (+59 more)
(+724 files in other folders)
