[package]
name = "rustible"
version = "0.1.0"
edition = "2021"
authors = ["Rustible Contributors"]
description = "A modern, async-first configuration management and automation tool written in Rust - an Ansible alternative with better performance, type safety, and parallel execution"
license = "MIT"
repository = "https://github.com/rustible/rustible"
keywords = ["ansible", "automation", "configuration-management", "devops", "infrastructure"]
categories = ["command-line-utilities", "development-tools", "config"]
rust-version = "1.75"
readme = "README.md"

[lib]
name = "rustible"
path = "src/lib.rs"

[[bin]]
name = "rustible"
path = "src/main.rs"

[features]
default = ["ssh", "local"]
ssh = []
local = []
docker = ["dep:bollard"]
kubernetes = ["dep:kube", "dep:k8s-openapi"]
full = ["ssh", "local", "docker", "kubernetes"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env", "cargo", "wrap_help"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
indexmap = { version = "2.1", features = ["serde"] }
regex = "1.10"
glob = "0.3"
globset = "0.4"
walkdir = "2.4"
shellexpand = "3.1"
which = "6.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
semver = "1.0"

# Template engine (Jinja2-compatible)
minijinja = { version = "2.0", features = ["loader", "builtins", "json"] }
tera = "1.19"

# Colored output and terminal UI
colored = "2.1"
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
dialoguer = "0.11"

# Configuration
config = "0.14"
dirs = "5.0"

# Encryption for vault functionality
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SSH connectivity
ssh2 = "0.9"

# Efficient synchronization primitives
parking_lot = "0.12"

# Lazy initialization
once_cell = "1.19"

# Async utilities
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Diff and change detection
similar = "2.4"

# Parallel execution
rayon = "1.8"

# HTTP client for API modules
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# CSV parsing for inventory
csv = "1.3"

# Docker support (optional)
bollard = { version = "0.16", optional = true }

# Kubernetes support (optional)
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }

# Hostname resolution
hostname = "0.3"

# Temporary files
tempfile = "3.9"
filetime = "0.2.26"
zip = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
mockall = "0.12"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
wiremock = "0.6"
proptest = "1.4"

# [[bench]]
# name = "execution_benchmark"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
